# borehole-gravimetry-inversion

./: .gitignore  4_grav15.dens  4_grav3.dens  CMakeLists.txt  FileIO.cpp  FileIO.h  FileWriter.cpp  FileWriter.h  GravimetryInversion.cpp  GravimetryInversion.h  MeasurementData.cpp  MeasurementData.h  Norms.cpp  Norms.h  Representant.cpp  Representant.h  Result.cpp  Result.h  calc_grav_accel_from_dens.py  gui.py  main.cpp  main_interpolator.cpp  main_inversion.cpp  main_inversion_with_errors.cpp  utils.h
cppGravInv/: CMakeLists.txt  main_interpolator.cpp  main_inversion.cpp  main_inversion_with_errors.cpp
cppGravInv/libGravimetryInversion/: CMakeLists.txt  ErrorNorms.cpp  FileIO.cpp  FileIO.h  GravimetryInversion.h  InterpolationNorm.cpp  Library.cpp  Library.h  ModelParameters.cpp  ModelParameters.h  NoErrorNorms.cpp  Norms.cpp  Norms.h
cppGravInv/python-bindings/: CMakeLists.txt  PyLibrary.cpp
ex9/: plot_both.py  resolution_analysis_multiple.py
exercises/ex11/: exercise.py
exercises/ex12/: exercise.py
exercises/ex9/: plot_misfit_over_norm.py  resolution_analysis_multiple.py
include/: CMakeLists.txt  FileIO.h  GravimetryInversion.h  MeasurementData.h  Norms.h  utils.h
libGravimetryInversion/: CMakeLists.txt  FileIO.cpp  InterpolationNorm.cpp  MeasurementData.cpp  NoErrorNorms.cpp  Norms.h  utils.cpp
libGravimetryInversion/ModelMaker/: DensityModel.py  SyntheticGenerator.py
pyGravInv/: DiscreteInversion.py  __init__.py
pyGravInv/DiscreteInversion/: DiscreteInversion.py  components.py  helpers.py
pyGravInv/ModelMaker/: SyntheticGenerator.py  synthetic.py
python-bindings/: CMakeLists.txt  PyLibrary.cpp
source/: CMakeLists.txt  ErrorNorms.cpp  FileIO.cpp  FileIO.h  GravimetryInversion.cpp  GravimetryInversion.h  InterpolationNorm.cpp  Library.h  MeasurementData.cpp  MeasurementData.h  ModelParameters.h  NoErrorNorms.cpp  Norms.cpp  Norms.h  PyLibrary.cpp  Result.h  gui.py  utils.cpp  utils.h
source/ModelMaker/: synthetic.py
source/ex9/: plot_both.py  test_dm.dens  test_inversion.dens
source/model-maker/: DensityModel.py  SyntheticGenerator.py  input_dens_model.dens  synthetic.py
tests/: test_correct_output.py
tests/data/: input_inversion_errors.dens  output_interpolation.int  output_inversion_L2.dens  output_inversion_L2_errors.dens  output_inversion_Seminorm.dens  output_inversion_Seminorm_errors.dens  output_inversion_W12.dens
